# hob-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  NOTICES.md  README.md  hob2d.code-workspace  hob_engine.code-workspace  vcpkg-configuration.json  vcpkg.json
.github/workflows/: pages.yml
assets/builtin/shaders/: blit.frag.hlsl  debug_text.frag.hlsl  debug_text.vert.hlsl  sprite.frag.hlsl  sprite.vert.hlsl  sprite_overlay.frag.hlsl  sprite_overlay.vert.hlsl
assets/shaders/: blit.vert.hlsl  line.frag.hlsl  line.vert.hlsl  outline.frag.hlsl  outline.vert.hlsl  psychedelic.frag.hlsl  psychedelic.vert.hlsl  sprite.vert.hlsl
config/: engine_config.json  input_config.json
docs/: CNAME  get-started.html  index.html  styles.css
engine_config/: input_config.json
scripts/: assets.lua  collision.lua  main.lua  spawn.lua
scripts/components/: character.lua  contact_logger.lua  player.lua  pulse_scale.lua
scripts/engine/: animation_clip_def.lua  asset_def.lua  bootstrap.lua  collision.lua  component_def.lua  component_schemas.generated.lua  component_schemas.lua  cursor.lua  entity_def.lua  factory_def.lua  factory_schemas.generated.lua  hot_reload.lua  material_def.lua  mixin_def.lua  path_schemas.generated.lua  resolve.lua  unwrap.lua
scripts/engine/meta/: bindings_meta.generated.lua  component_registry_meta.generated.lua  engine.generated.lua  engine.lua  engine_meta.generated.lua  entity_registry_meta.generated.lua  factory_aliases_meta.generated.lua  factory_schemas_meta.generated.lua  lua_component_meta.lua  path_aliases_meta.generated.lua  path_schemas_meta.generated.lua
scripts/entities/: boxes.lua  player.lua  shapes.lua
scripts/game/: assets.lua  game.lua
scripts/game/assets/: animations.lua  assets.lua  materials.lua
scripts/game/components/: contact_logger.lua  enemy_comp.lua  player.lua  player_comp.lua  projectile_comp.lua  scale_pulse.lua  spawner_comp.lua  weapon_comp.lua  zoom_pulse.lua
scripts/game/entities/: bullet_entity.lua  camera.lua  enemy.lua  enemy_entity.lua  player.lua  player_entity.lua  shape_entities.lua  shapes.lua  spawner_entity.lua
scripts/game/mixins/: damageable.lua  stunnable.lua
scripts/meta/: engine.generated.lua  engine.lua
scripts/mixins/: damageable.lua  stunnable.lua
src/: Main.cpp  main.cpp
src/engine/: App.cpp  App.h  Assets.cpp  Assets.h  Input.cpp  Input.h  SdlContext.cpp  SdlContext.h  Timer.cpp  Timer.h
src/engine/animation/: animation_clip.h
src/engine/components/: BoxColliderComponent.cpp  BoxColliderComponent.h  CameraComponent.cpp  CameraComponent.h  CapsuleColliderComponent.cpp  CapsuleColliderComponent.h  CharacterBodyComponent.cpp  CharacterBodyComponent.h  ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  ImageComponent.cpp  ImageComponent.h  InputComponent.cpp  InputComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  TransformComponent.cpp  TransformComponent.h  camera_component.cpp  camera_component.h  component.cpp  component.h  image_component.cpp  image_component.h  input_component.cpp  input_component.h  lua_script_component.cpp  lua_script_component.h  lua_script_component_impl.h  sprite_animator_component.cpp  sprite_animator_component.h  sprite_component.cpp  sprite_component.h  transform_component.cpp  transform_component.h
src/engine/components/physics/: BoxColliderComponent.cpp  BoxColliderComponent.h  CapsuleColliderComponent.cpp  CapsuleColliderComponent.h  CharacterBodyComponent.cpp  CharacterBodyComponent.h  ColliderComponent.cpp  ColliderComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  box_collider_component.cpp  box_collider_component.h  capsule_collider_component.cpp  capsule_collider_component.h  character_body_component.cpp  character_body_component.h  circle_collider_component.cpp  circle_collider_component.h  collider_component.cpp  collider_component.h  rigidbody_component.cpp  rigidbody_component.h
src/engine/core/: App.cpp  App.h  AssetHandles.h  Assets.cpp  Assets.h  Debug.cpp  Debug.h  ImGuiSystem.cpp  ImGuiSystem.h  Input.cpp  Input.h  PathUtils.cpp  PathUtils.h  Physics.cpp  Physics.h  Render.cpp  Render.h  SdlContext.cpp  SdlContext.h  Timer.cpp  Timer.h  app.cpp  app.h  app_console.cpp  app_console.h  assets.cpp  assets.h  console.cpp  console.h  cursor.cpp  cursor.h  debug.cpp  debug.h  engine.cpp  engine.h  engine_config.cpp  engine_config.h  imgui_system.cpp  imgui_system.h  input.cpp  (+20 more)
src/engine/core/scripting/: lua_bind_components.cpp  lua_bind_debug.cpp  lua_bind_math.cpp  lua_bind_subsystems.cpp  lua_meta.cpp  lua_script_system.cpp  lua_script_system_impl.h  lua_type_names.h
src/engine/core/systems/: console.cpp  console.h  cursor.cpp  cursor.h  entity_spawner.cpp  entity_spawner.h  imgui_system.cpp  imgui_system.h  input.cpp  input.h  input_config.cpp  input_config.h  physics.cpp  physics.h  renderer.cpp  renderer.h  sdl_context.cpp  sdl_context.h  timer.cpp  timer.h
src/engine/core/systems/renderer/: font.cpp  font.h  material.h  renderer.cpp  renderer.h  renderer_debug.cpp  renderer_passes.cpp  renderer_pipelines.cpp  renderer_resources.cpp  sprite_draw_data.h  texture.cpp  texture.h
src/engine/core/systems/scripting/: lua_bind_assets.cpp  lua_bind_components.cpp  lua_meta.cpp  (+24 more)
src/engine/entity/: Entity.cpp  Entity.h  EntityHandle.h  EntitySpawner.cpp  EntitySpawner.h  entity.cpp  entity.h  entity_ref.cpp  entity_ref.h  entity_spawner.cpp  entity_spawner.h
src/engine/math/: AABB.cpp  AABB.h  Capsule.cpp  Capsule.h  Constants.h  Math.h  Vector2.cpp  Vector2.h  aabb.cpp  aabb.h  capsule.cpp  capsule.h  circle.cpp  circle.h  color.cpp  color.h  constants.h  mathf.cpp  mathf.h  matrix2x3.cpp  matrix2x3.h  matrix4x4.h  vector2.cpp  vector2.h
src/engine/scripting/: lua_bindings.cpp  lua_bindings.h
src/game/: ContactLoggerComponent.cpp  ContactLoggerComponent.h  PlayerComponent.cpp  PlayerComponent.h  contact_logger_component.cpp  contact_logger_component.h  player_component.cpp  player_component.h
vcpkg-overlays/directx-dxc/: directx-dxc-config.cmake.in  portfile.cmake  usage  vcpkg.json
